"add flow to prevent overflow"

--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,34 @@
+*{
+    margin:0
+}
+
+.container-fluid{
+    margin:0;
+    padding:0;
+}
 nav{
     width:100%;
     color:#00458A;
     display:flex;
     justify-content: space-between;
-    padding: 0px 90px 0px 90px;
     box-shadow: 1px 1px 8px #888888;
+}
+.head-content{
+    display: flex;
+    justify-content: space-around;
 }
 
 nav div a{
     color:#00458A;
     text-decoration: none;
-    padding-right:20px;
+ 
 }
 
 nav div{
     padding:1.5%;
+    flex-grow:1;
 }
-*{
-    margin:0
-}
+
 
 .content-top{
     display: flex;
@@ -343,6 +353,10 @@ nav .menu{
     .head{
         display: block;
         font-size:2.5rem;
+    }
+
+    nav .head-content{
+        display:none;
     }
 
     
